--- a/project/link_to_external_youtube.html
+++ b/project/link_to_external_youtube.html
@@ -5,7 +5,7 @@
 		<title>Link to external website href Youtube</title>
 	</head>
 	
-	</body>
+	<body>
 		<a href="https://www.youtube.com/">YouTube 1</a>
 		
 		<a href="https://www.youtube.com/" target="new">YouTube 2</a>
